--- a/PearlRiverDelta.html
+++ b/PearlRiverDelta.html
@@ -42,7 +42,7 @@
 <div class="container">
 	<div class="column-md-4">
 		<div class="thumbnail portfolio">
-				<img src="/Users/claretrainor/Desktop/Website/assets/PearlRiverDelta.png"/>
+				<img src="/assets/PearlRiverDelta.png"/>
 			</a>
 		</div>
 	</div>	
