--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 			<div class="col-md-4 col-sm-4">
 				<div class="thumbnail portfolio-thumbnail">
 					<a href="GDP.html">
-						<img src="/Users/claretrainor/Desktop/Website/assets/Population_GDP2-01_square.png" alt="GDP Accross the World" />
+						<img src="/assets/Population_GDP2-01_square.png" alt="GDP Accross the World" />
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<div class="thumbnail portfolio-thumbnail">
 					<a href="SEZ.html">
-						<img src="/Users/claretrainor/Desktop/Website/assets/WatermanButterfly_square.png" 
+						<img src="/assets/WatermanButterfly_square.png" 
 						alt="Special Economic Zones" />
 				</div>
 			</div>	
 			<div class="col-md-4 col-sm-4">
 				<div class="thumbnail portfolio-thumbnail">
 					<a href="ThreeSectors.html">
-						<img src="/Users/claretrainor/Desktop/Website/assets/Ag,Industry,andService_square.png" 
+						<img src="/assets/Ag,Industry,andService_square.png" 
 						alt="Global Workforce in Three Sectors"/>
 				</div>
 			</div>
@@ -69,21 +69,21 @@
 			<div class="col-md-4 col-sm-4">
 				<div class="thumbnail portfolio-thumbnail">
 					<a href="UnitedStates.html">
-						<img src="/Users/claretrainor/Desktop/Website/assets/US_Map_square.png" 
+						<img src="/assets/US_Map_square.png" 
 						alt="The Seven Regions of the United States"/>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<div class="thumbnail portfolio-thumbnail">
 					<a href="PearlRiverDelta.html">
-						<img src="/Users/claretrainor/Desktop/Website/assets/PearlRiverDelta_square.png" 
+						<img src="/assets/PearlRiverDelta_square.png" 
 						alt="The Pearl River Delta"/>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<div class="thumbnail portfolio-thumbnail">
 					<a href="PacificCoastBikeMap.html">
-						<img src="/Users/claretrainor/Desktop/Website/assets/PacificCoastBikeMap_square.png" 
+						<img src="/assets/PacificCoastBikeMap_square.png" 
 						alt="The Pacific Coast Adventure"/>
 				</div>
 			</div>
