--- a/UnitedStates.html
+++ b/UnitedStates.html
@@ -41,7 +41,7 @@
 <div class="container">
 	<div class="column-md-4">
 		<div class="thumbnail portfolio">
-				<img src="/Users/claretrainor/Desktop/Website/assets/US_Map.png" width="100%" class="portfolio-page-image" />
+				<img src="/assets/US_Map.png" width="100%" class="portfolio-page-image" />
 			</a>
 		</div>
 	</div>	
