--- a/GDP.html
+++ b/GDP.html
@@ -40,7 +40,8 @@
 
 <div class="container">
 	<div class="column-md-4">
-		<img src="/assets/Population_GDP2-01.png" alt="GDP Accross the World" width="100%" class="portfolio-page-image"/>
+		<div class="thumbnail portfolio">
+			<img src="/assets/Population_GDP2-01.png" alt="GDP Accross the World" width="100%" class="portfolio-page-image"/>
 		</a>
 		</div>
 	</div>	
